--- a/Exercise.Rmd
+++ b/Exercise.Rmd
@@ -63,13 +63,16 @@ df_fh %>%
 ```
 
 ## c) {-}
+Comment on the boxplot, what are the characteristics of each category?
+
+## d) {-}
 
 Describe the distribution of the baseline heart rate for all participants in this sample, is the baseline heart rate normally distributed, comment on any skewness. What about each class? Use an appropriate graph to answer this question.
 
 *Solution:*
 
 ```{r}
-## 1.c
+## 1.d
 
 df_fh %>% 
   ggplot(aes(x = `baseline value`))+
@@ -85,22 +88,46 @@ df_fh %>%
 
 ## a) {-}
 
-What is the mean baseline heart rate for each class?
+What is the mean uterine contraction for each class?
 
 *Solution:*
 
 ```{r}
 # Question 2
+df_fh_n <- df_fh %>% filter(fetal_health == "Normal")
+mean(df_fh_n$uterine_contractions)
+
+df_fh_s <- df_fh %>% filter(fetal_health == "Suspect")
+mean(df_fh_s$uterine_contractions)
+
+df_fh_p <- df_fh %>% filter(fetal_health == "Pathological")
+mean(df_fh_p$uterine_contractions)
 ```
 
 ## b) {-}
 
-Since we have a small sample size for those who are suspected to be pathological and those who are truly pathological, what is the bootstrapped mean baseline heart rate for each class? State your assumptions.
+Since we have a small sample size for those who are suspected to be pathological and those who are truly pathological, what is one method that we can use to artificially create a pseudo-population and calculate the median of these two groups? State your assumptions.
 
-*Solution:*
+*Solution:*  Bootstrapping
 
 ## c) {-}
 
+What is one weakness of using the bootstrapping method?
+
+Solution: The bootstrapping method 
+
+## d) {-}
+
+Your sister is also concerned that her baby does not move as much, which could be a sign of unhealthy pregnancy.
+
+```{r}
+
+df_fh %>% 
+  ggplot(aes(x = fetal_movement, fill = fetal_health))+
+  geom_density(alpha = 0.5) + 
+  scale_x_log10()
+
+```
 
 ```{r}
 # Question 3
