--- a/Exercise.Rmd
+++ b/Exercise.Rmd
@@ -47,7 +47,7 @@ Looking at the 3 different classification of fetal health status and each fetus'
 *Solution:*
 
 ```{r}
-# Question 1
+#----Question 1----------
 
 # 1.b
 df_fh$fetal_health <- ifelse(df_fh$fetal_health == 1, 
@@ -88,12 +88,14 @@ df_fh %>%
 
 ## a) {-}
 
-What is the mean uterine contraction for each class?
+Your sister thinks that more uterine contraction means that her fetus is unhealthy and she is more likely to give a pre-term birth. 
+
+Is her statement true? What is the mean uterine contraction for each class?
 
 *Solution:*
 
 ```{r}
-# Question 2
+#----Question 2--------------
 df_fh_n <- df_fh %>% filter(fetal_health == "Normal")
 mean(df_fh_n$uterine_contractions)
 
@@ -103,26 +105,54 @@ mean(df_fh_s$uterine_contractions)
 df_fh_p <- df_fh %>% filter(fetal_health == "Pathological")
 mean(df_fh_p$uterine_contractions)
 ```
+Looking at the mean, this statement is not true. The Normal category has the highest number of mean uterine contractions. And the mean uterine contraction in the Pathological category is lower than the mean in the Normal category. The Suspect category has the lowest mean uterine contractino out of the three classes.
+
+Nevertheless, further testing is required to confirm this observation.
+
 
 ## b) {-}
 
-Since we have a small sample size for those who are suspected to be pathological and those who are truly pathological, what is one method that we can use to artificially create a pseudo-population and calculate the median of these two groups? State your assumptions.
+Since we have a small sample size for those who are suspected to be pathological and those who are determined to be pathological, what is one method that we can use to artificially create a pseudo-population and calculate the median of these two groups? State your assumptions.
 
 *Solution:*  Bootstrapping
+
+```{r}
+B <- 10000
+set.seed(3949)
+
+R_s <- replicate(B, { # first argument, # of replicates
+  df_fh_s %>% 
+    dplyr::slice_sample(n = nrow(df_fh_s), replace = T) %>%
+    summarise(mean = mean(df_fh_s$uterine_contractions)) %>%
+    pull(mean)
+})
+
+mean(R_s)
+
+R_p <- replicate(B, { # first argument, # of replicates
+  df_fh_p %>% 
+    dplyr::slice_sample(n = nrow(df_fh_p), replace = T) %>%
+    summarise(mean = mean(df_fh_p$uterine_contractions)) %>%
+    pull(mean)
+})
+
+mean(R_p)
+```
 
 ## c) {-}
 
 What is one weakness of using the bootstrapping method?
 
-Solution: The bootstrapping method 
+Solution: The bootstrapping method assumes that the sample is representative of the whole population. However, when we have a small sample size, that is not always the case. There could be sampling errors which can skew the distribution of the sample. And the bootstrapping method cannot correct this error as it can only sample within this small set of data. As the saying goes, "garbage in, garbage out". If the sample is not representative of the population, the results obtained from bootstrap will not be accurate and will result in an incorrect inference of the population parameter.
 
 ## d) {-}
 
 Your sister is also concerned that her baby does not move as much, which could be a sign of unhealthy pregnancy.
 
-X-axis in log scale.
+Transform x-axis to a logarithmic scale.
 
 ```{r}
+# 2.d
 
 df_fh %>% 
   ggplot(aes(x = fetal_movement, fill = fetal_health))+
@@ -146,10 +176,6 @@ Suppose this data represents the population of newborns in one hospital and you 
 
 ```{r}
 ## ---- Question-5a ------------------------------------------------------------
-df_fh <- readr::read_csv(here::here("fetal_health.csv"))
-library(dplyr)
-library(tidyr)
-library(mosaic)
 df_fh %>%
   select(fetal_health)%>%
   filter(fetal_health != 1)%>%
